Address duplicate type system